# capnproto

./: .gitignore  Cargo.toml
c++/src/capnp/: afl-testcase.c++  any-test.c++  any.c++  any.h  arena.c++  arena.h  blob-test.c++  blob.c++  blob.h  canonicalize-test.c++  capability-test.c++  capability.c++  capability.h  common-test.c++  dynamic-capability.c++  dynamic-test.c++  dynamic.c++  dynamic.h  encoding-test.c++  endian-reverse-test.c++  endian-test.c++  endian.h  fuzz-test.c++  generated-header-support.h  layout-test.c++  layout.c++  layout.h  list.c++  list.h  llvm-fuzzer-testcase.c++  membrane-test.c++  membrane.c++  membrane.h  message-test.c++  message.c++  message.h  orphan-test.c++  orphan.h  pointer-helpers.h  pretty-print.h  (+29 more)
c++/src/capnp/compat/: json-rpc-test.c++  json-rpc.c++  json-rpc.h  json-test.c++  json.c++  std-iterator.h
c++/src/capnp/compiler/: capnp.c++  compiler.c++  compiler.h  error-reporter.c++  evolution-test.c++  generics.c++  generics.h  lexer-test.c++  lexer.c++  lexer.h  module-loader.c++  module-loader.h  node-translator.c++  node-translator.h  parser.c++  parser.h  type-id-test.c++  type-id.c++
c++/src/capnp/compiler/rust/: Cargo.toml  build.rs  cxx.h
c++/src/capnp/compiler/rust/src/: lib.rs
c++/src/capnp/json/rust/: Cargo.toml  build.rs
c++/src/capnp/json/rust/src/: lib.rs
c++/src/capnp/rust/: Cargo.toml  build.rs
c++/src/capnp/rust/src/: lib.rs
c++/src/kj/: CMakeLists.txt  async-io-internal.h  async-io-test.c++  async-io-unix.c++  async-io-win32.c++  async-io.c++  async-unix.c++  async-win32.c++  async-xthread-test.c++  async.c++  debug.h  exception.c++  exception.h  filesystem-disk-test.c++  filesystem-disk-unix.c++  filesystem-disk-win32.c++  filesystem.c++  io.c++  main.c++  main.h  mutex-test.c++  string.c++  test.h  time-test.c++  time.c++  timer.c++
c++/src/kj/async/rust/: Cargo.toml  build.rs
c++/src/kj/async/rust/src/: lib.rs
c++/src/kj/gzip/rust/: Cargo.toml  build.rs
c++/src/kj/gzip/rust/src/: lib.rs
c++/src/kj/parse/: char.c++  char.h  common.h
c++/src/kj/rust/: Cargo.toml  build.rs
c++/src/kj/rust/src/: lib.rs
rust/kj-build/: Cargo.toml
rust/kj-build/src/: lib.rs
