[package]
name = "kj-sys"
version = "0.1.0"
edition = "2021"
links = "kj"

[lib]

[features]
default = ["heavy"]
heavy = []
libdl = []
save_acquired_lock_info = []
track_lock_blocking = []

[dependencies]
cxx = "1.0.76"

[build-dependencies]
anyhow = "1.0.65"
cc = "1.0.73"
cxx-build = "1.0.76"
kj-build = { path = "../../../../rust/kj-build" }
